--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Verify package
         run: |
           # do not use exit codes while errors occured
-          lintian -v target/${{ matrix.target }}/debian/*.deb || true
+          lintian -v akr.deb || true
 
       - name: Upload deb asset to release
         if: ${{ github.event.release.upload_url }}
@@ -53,7 +53,7 @@ jobs:
           TARGET: ${{ matrix.target == 'x86_64-unknown-linux-gnu' && 'amd64' || 'unknown' }}
           VERSION: ${{ github.event.release.tag_name }}
         run: |
-          cp target/${{ matrix.target }}/debian/akr.deb akr_$VERSION_$TARGET.deb
+          mv akr.deb akr_$VERSION_$TARGET.deb
           gh release upload $VERSION akr_$VERSION_$TARGET.deb
 
   rpm:
@@ -67,6 +67,10 @@ jobs:
     container:
       image: ${{ matrix.image }}
     steps:
+      - name: Install common libs
+        run: |
+          sudo apt-get install rpmlint
+
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
@@ -95,12 +99,12 @@ jobs:
         run: dist=$(rpm --eval %{?dist}); sed -i -e 's/release = "\(.*\)"/release = "\1'$dist'"/g' Cargo.toml
 
       - name: Create package
-        run: cargo generate-rpm -p crates/kr
+        run: cargo generate-rpm -p crates/kr -o akr.rpm
 
       - name: Verify package
         run: |
           # do not use exit codes when errors occurred
-          rpmlint target/generate-rpm/akr-*.rpm || true
+          rpmlint akr.rpm || true
 
       - name: Upload rpm asset to release
         if: ${{ github.event.release.upload_url }}
@@ -109,5 +113,5 @@ jobs:
           IMAGE: ${{ matrix.image == 'alvistack/centos-9-stream' && 'centos-9-stream' || 'unknown' }}
           VERSION: ${{ github.event.release.tag_name }}
         run: |
-          cp target/generate-rpm/akr-$VERSION-1.x86_64.rpm akr_$VERSION-$IMAGE.rpm
+          mv akr.rpm akr_$VERSION-$IMAGE.rpm
           gh release upload $VERSION akr_$VERSION-$IMAGE.rpm
